# codebrain

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
codebrain/: Cargo.toml
codebrain-mcp/: Cargo.toml
codebrain-mcp/src/: main.rs  protocol.rs  server.rs  tools.rs
codebrain/src/: analyze.rs  build.rs  cache.rs  cluster.rs  collector.rs  config.rs  error.rs  formatter.rs  graph.rs  handle.rs  lib.rs  model.rs  query.rs  registry.rs  scanner.rs  types.rs
codebrain/src/detectors/: deps.rs  env.rs  middleware.rs  mod.rs  routes.rs  schema.rs
codebrain/src/extract/: ast.rs  mod.rs  semantic.rs
codebrain/src/extract/lang/: go.rs  javascript.rs  mod.rs  python.rs  rust.rs  swift.rs  typescript.rs
codebrain/tests/: formatter_test.rs  graph_test.rs  routes_test.rs  scanner_test.rs  schema_test.rs
