[workspace]
members  = ["codebrain", "codebrain-mcp"]
resolver = "2"

[workspace.dependencies]
serde       = { version = "1",    features = ["derive"] }
serde_json  = "1"
anyhow      = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono      = { version = "0.4",  features = ["serde"] }
regex       = "1"
walkdir     = "2"
thiserror   = "1"
dirs        = "5"
tokio       = { version = "1",    features = ["full"] }
